change the order in the Tools section and add Playwright

--- a/index.html
+++ b/index.html
@@ -50,20 +50,21 @@
                     <h3>Tools</h3>
                     <ul class="tools">
                         <li>Microsoft Office</li>
+                        <li>Windows/Linux</li>
                         <li>Confluence/Jira</li>
                         <li>TestRail</li>
                         <li>GitHub/Git</li>
-                        <li>Windows/Linux</li>
+                        <li>Playwright</li>
+                        <li>Postman/SoapUI</li>
                         <li>HTML/HTML5</li>
                         <li>CSS/Bootstrap</li>
                         <li>JavaScript</li>
+                        <li>Electron</li>
+                        <li>Node.js</li>
                         <li>Java</li>
                         <li>PHP</li>
                         <li>SQL/MySQL</li>
-                        <li>Electron</li>
-                        <li>Node.js</li>
                         <li>Soap Web Service</li>
-                        <li>Postman/SoapUI</li>
                         <li>IntelliJ IDEA</li>
                         <li>Visual Studio Code</li>
                         <li>WordPress</li>
