Update About Me section
Adding information about an interest in data analysis.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               Computer Engineering. Recently, I obtained the ISTQB® Certified
               Tester - Foundation Level certificate. Currently, I am taking my
               first steps in test automation and developing my programming
-              skills in Java and SQL.
+              skills in Java and SQL. I am also interested in data analysis.
             </p>
           </div>
           <div class="about">
