Add Salesforce in Tools

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <li><b>Operating systems:</b> Windows, Linux</li>
             <li>
               <b>Business management systems:</b> Microsoft Dynamics 365, SAP,
-              Comarch ERP Optima
+              Comarch ERP Optima, Salesforce
             </li>
           </ul>
           <h3>Programming languages</h3>
@@ -138,7 +138,7 @@
               Computer Engineering. Recently, I obtained the ISTQB® Certified
               Tester - Foundation Level certificate. Currently, I am taking my
               first steps in test automation and developing my programming
-              skills in Java and SQL. I am also interested in data analysis.
+              skills in SQL. I am also interested in data analysis.
             </p>
           </div>
           <div class="about">
